# KRML-250

./: .gitignore  CLAUDE.md  README.md  nixpacks.toml  package.json
apps/api/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  database.py
apps/api/app/models/: orm.py  schemas.py
apps/api/app/routers/: admin.py  defenses.py  leaderboard.py  participants.py  predictions.py  songs.py  submissions.py  swipe.py
apps/api/app/services/: email.py  ranking.py
apps/web/: .env.example  middleware.ts  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/250/: page.tsx
apps/web/app/250/decades/: page.tsx
apps/web/app/250/defend/[songId]/: page.tsx
apps/web/app/250/edit/: page.tsx
apps/web/app/250/predict/: page.tsx
apps/web/app/250/results/: page.tsx
apps/web/app/250/rules/: page.tsx
apps/web/app/250/submit/: page.tsx
apps/web/app/250/swipe/: page.tsx
apps/web/app/250/towns/: page.tsx
apps/web/app/250/verify/: page.tsx
apps/web/app/250/verify/[token]/: page.tsx
apps/web/app/admin/krml-250/: layout.tsx  page.tsx
apps/web/components/krml250/: Countdown.tsx  DJPicks.tsx  DecadeLeaderboard.tsx  Leaderboard.tsx  Pagination.tsx  SongAutocomplete.tsx  SongCard.tsx  SponsorPlacement.tsx  TownLeaderboard.tsx
apps/web/hooks/: useParticipantSession.ts
apps/web/lib/: api.ts
docs/: qa-checklist.md
(+9 files in other folders)
